[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/PvEMap.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.15, 0.1, 0.2, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PvEMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="MapContainer" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.85
clip_contents = true

[node name="PathsContainer" type="Control" parent="MapContainer"]
custom_minimum_size = Vector2(1000, 550)

[node name="NodesContainer" type="Control" parent="MapContainer"]
custom_minimum_size = Vector2(1000, 550)

[node name="ChampionPanel" type="Panel" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.25
anchor_bottom = 0.12
theme_override_styles/panel = SubResource("1")

[node name="SignificatorIcon" type="TextureRect" parent="ChampionPanel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.25
anchor_bottom = 0.9
stretch_mode = 5

[node name="NameLabel" type="Label" parent="ChampionPanel"]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.35
theme_override_font_sizes/font_size = 18
text = ""

[node name="HealthLabel" type="Label" parent="ChampionPanel"]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.65
text = "30/30 HP"

[node name="GoldLabel" type="Label" parent="ChampionPanel"]
anchor_left = 0.65
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.65
text = "Gold: 100"

[node name="RegionLabel" type="Label" parent="ChampionPanel"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.95
anchor_bottom = 0.9
text = "Region 1/3"

[node name="RunInfo" type="Panel" parent="."]
anchor_left = 0.75
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.12
theme_override_styles/panel = SubResource("1")

[node name="DeckButton" type="Button" parent="RunInfo"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.3
anchor_bottom = 0.85
text = "Deck"

[node name="OmensButton" type="Button" parent="RunInfo"]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.85
text = "Omens"

[node name="RelicsButton" type="Button" parent="RunInfo"]
anchor_left = 0.65
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.85
text = "Relics"

[node name="NavigationButtons" type="HBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.88
anchor_right = 0.6
anchor_bottom = 0.96
alignment = 1

[node name="BackButton" type="Button" parent="NavigationButtons"]
custom_minimum_size = Vector2(100, 40)
text = "Menu"

[node name="SaveButton" type="Button" parent="NavigationButtons"]
custom_minimum_size = Vector2(100, 40)
text = "Save Run"

[node name="RewardsPopup" type="AcceptDialog" parent="."]
title = "Victory!"
size = Vector2i(600, 400)
dialog_text = "Battle Complete! Choose one card:"

[node name="RewardsChoices" type="HBoxContainer" parent="RewardsPopup"]
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.8
alignment = 1

[node name="Choice1" type="Button" parent="RewardsPopup/RewardsChoices"]
text = "Choice 1"
modulate = Color(0.8, 0.8, 0.8)

[node name="Choice2" type="Button" parent="RewardsPopup/RewardsChoices"]
text = "Choice 2"
modulate = Color(0.8, 0.8, 0.8)

[node name="Choice3" type="Button" parent="RewardsPopup/RewardsChoices"]
text = "Choice 3"
modulate = Color(0.8, 0.8, 0.8)

[node name="EventPopup" type="ConfirmationDialog" parent="."]
title = "Mysterious Encounter"
size = Vector2i(700, 500)
dialog_text = "A wandering fortune teller offers to read your cards...

Option 1: Accept the reading
- Gain an Omen (random modifier)
- Lose 50 gold

Option 2: Politely decline
- No effect"

[node name="ShopPopup" type="AcceptDialog" parent="."]
title = "Arcane Shop"
size = Vector2i(800, 600)
dialog_text = "Welcome to the Arcane Shop!

Cards for Sale:
‚Ä¢ Three of Swords - 100g
‚Ä¢ Queen of Cups - 150g
‚Ä¢ The Magician - 300g

Upgrades:
‚Ä¢ Remove a card - 75g
‚Ä¢ Upgrade a card - 100g"

[node name="Legend" type="Panel" parent="."]
anchor_left = 0.02
anchor_top = 0.88
anchor_right = 0.2
anchor_bottom = 0.98
theme_override_styles/panel = SubResource("2")

[node name="Title" type="Label" parent="Legend"]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.25
text = "Node Types"
horizontal_alignment = 1

[node name="Types" type="VBoxContainer" parent="Legend"]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.95

[node name="Battle" type="Label" parent="Legend/Types"]
text = "‚öîÔ∏è Battle"
theme_override_font_sizes/font_size = 12

[node name="Elite" type="Label" parent="Legend/Types"]
text = "üëπ Elite"
theme_override_font_sizes/font_size = 12

[node name="Boss" type="Label" parent="Legend/Types"]
text = "üëë Boss"
theme_override_font_sizes/font_size = 12

[node name="Event" type="Label" parent="Legend/Types"]
text = "‚ùì Event"
theme_override_font_sizes/font_size = 12

[node name="Shop" type="Label" parent="Legend/Types"]
text = "üõí Shop"
theme_override_font_sizes/font_size = 12

[node name="Rest" type="Label" parent="Legend/Types"]
text = "üèïÔ∏è Rest"
theme_override_font_sizes/font_size = 12